<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/nav_txt_home" />

    <item
        android:id="@+id/navigation_wisata"
        android:icon="@drawable/brochure_icon"
        android:title="@string/nav_txt_wisata" />

    <item
        android:id="@+id/navigation_kesenian"
        android:icon="@drawable/music"
        android:title="@string/nav_txt_kesenian" />

    <item
        android:id="@+id/navigation_kuliner"
        android:icon="@drawable/dish_icon"
        android:title="@string/nav_txt_kuliner" />

    <item
        android:id="@+id/navigation_event"
        android:icon="@drawable/calendar_icon"
        android:title="@string/nav_txt_event" />

</menu>
