<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="5dp"
    android:paddingEnd="5dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:background="@drawable/style_walkthrough_3"
    >

    <ImageView
        android:id="@+id/img_user"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerInParent="true"
        android:layout_above="@id/txt_walkt_title_1"
        android:src="@drawable/dish"
        android:contentDescription="@string/home_icon" />

    <TextView
        android:id="@+id/txt_walkt_title_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="25dp"
        android:textSize="18sp"
        android:text="@string/walkthrough_title_3"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_walkt_title_1"
        android:layout_centerInParent="true"
        android:layout_marginTop="25dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:textAlignment="center"
        android:textSize="13sp"
        android:text="@string/walkthrough_content_3"
        android:textColor="@color/colorWhite"
        />


</RelativeLayout>