<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingTop="5dp"
    >

    <android.support.v7.widget.CardView
        android:id="@+id/card_wisata_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:padding="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">
            <ImageView
                android:id="@+id/icon_wisata"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@mipmap/ic_launcher"
                android:contentDescription="@string/home_icon" />

            <TextView
                android:id="@+id/txt_nama_wisata"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:text="@string/nama_wisata"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_below="@id/icon_wisata"
                android:layout_marginStart="5dp" />

            <TextView
                android:id="@+id/txt_kategori_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:gravity="center_vertical"
                android:text="@string/kategori_"
                android:textSize="14sp"
                android:layout_below="@id/txt_nama_wisata"
                android:layout_marginStart="5dp" />
            <TextView
                android:id="@+id/txt_kategori"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:gravity="center_vertical"
                android:text="@string/kategrori"
                android:textSize="14sp"
                android:layout_below="@id/txt_nama_wisata"
                android:layout_toRightOf="@id/txt_kategori_text"
                android:textStyle="bold"
                android:layout_marginStart="3dp"
                android:layout_toEndOf="@id/txt_kategori_text" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>