<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingTop="5dp"
    >

    <android.support.v7.widget.CardView
        android:id="@+id/card_berita_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">
            <ImageView
                android:id="@+id/icon_berita"
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:src="@mipmap/ic_launcher"
                android:contentDescription="@string/home_icon" />

            <TextView
                android:id="@+id/txt_judul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:text="@string/judul_berita"
                android:textSize="17sp"
                android:layout_toRightOf="@id/icon_berita"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/icon_berita" />

            <TextView
                android:id="@+id/txt_tanggal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="3dp"
                android:gravity="center_vertical"
                android:text="@string/tanggal"
                android:textSize="14sp"
                android:layout_toRightOf="@id/icon_berita"
                android:layout_below="@id/txt_judul"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/icon_berita" />

            <TextView
                android:id="@+id/txt_sumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:gravity="center_vertical"
                android:text="@string/sumber_berita"
                android:textSize="14sp"
                android:layout_toRightOf="@id/icon_berita"
                android:layout_below="@id/txt_tanggal"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/icon_berita" />

            <TextView
                android:id="@+id/txt_sumber_berita"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:gravity="center_vertical"
                android:text="@string/sumber_berita"
                android:textSize="10sp"
                android:layout_toRightOf="@id/icon_berita"
                android:layout_below="@id/txt_sumber"
                android:layout_marginStart="5dp"
                tools:ignore="SmallSp"
                android:layout_toEndOf="@id/icon_berita" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>